# actix-starter

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/project-core/: Cargo.toml
crates/project-core/project-core-domain/: Cargo.toml
crates/project-core/project-core-domain/src/: error.rs  lib.rs  result.rs
crates/project-core/project-core-domain/src/models/: mod.rs
crates/project-core/project-core-domain/src/repositories/: user.rs
crates/project-core/project-core-domain/src/services/: registration.rs
crates/project-core/src/: error.rs  lib.rs  prelude.rs
crates/project-core/src/domain/models/: user.rs
crates/project-core/src/domain/repositories/: mod.rs  user.rs
crates/project-core/src/domain/services/: mod.rs  registration.rs
crates/project-core/src/infrastructure/: mod.rs
crates/project-core/src/infrastructure/models/: mod.rs  user.rs
crates/project-core/src/infrastructure/repositories/: mod.rs  user.rs
crates/project-core/src/infrastructure/services/: registration.rs
crates/project-core/src/services/: mod.rs  registration.rs
crates/project-core/tests/: just_testing.rs
crates/project-rest-api/: Cargo.toml
crates/project-rest-api/src/: config.rs  error.rs  logging.rs  main.rs  openapi.rs  prelude.rs  response.rs  state.rs
crates/project-rest-api/src/controllers/: auth.rs  health.rs  mod.rs
crates/project-rest-api/src/dto/: user.rs
crates/project-rest-api/src/extractors/: mod.rs
crates/project-rest-api/src/extractors/di/: injectable.rs  injector.rs  mod.rs
migrations/: 20240216210920_init_tables.up.sql
