[package]
name = "project-core"
description = "The implementation of project's core domain"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
chrono = "0.4.34"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono"] }
thiserror = "1.0.57"
anyhow = "1.0.80"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["test-util", "macros"] }  # Used for async tests

