[package]
name = "project-rest-api"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
log = "0.4.20"
flexi_logger = "0.27.4"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"]}
thiserror = "1.0.57"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"

project-core = { path = "../project-core" }
