[package]
name = "project-core-domain"
description = "Project's core library domain"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
anyhow = "1.0.80"
async-trait = "0.1.77"
